--- a/app/src/main/res/layout/last_message_messages.xml
+++ b/app/src/main/res/layout/last_message_messages.xml
@@ -11,7 +11,7 @@
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_width="64dp"
-            android:background="@mipmap/ic_launcher_round" android:visibility="visible"/>
+            android:background="@mipmap/ic_launcher_round" android:visibility="invisible"/>
     <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -22,7 +22,7 @@
             app:layout_constraintBottom_toTopOf="@+id/last_message_message_textView"
             app:layout_constraintVertical_chainStyle="packed" android:textStyle="bold"
             android:textColor="@android:color/black" android:textSize="18sp" android:hint="@string/userName"
-            android:visibility="visible"/>
+            android:visibility="invisible"/>
     <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -33,5 +33,5 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/last_message_userName_textView"
             app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="8dp"
-            android:hint="@string/lastMessage" android:visibility="visible"/>
+            android:hint="@string/lastMessage" android:visibility="invisible"/>
 </android.support.constraint.ConstraintLayout>
