--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -6,7 +6,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ChatActivity">
-
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -29,11 +28,12 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layoutManager="android.support.v7.widget.GridLayoutManager"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/send_button_chat" android:background="@color/chatBackground"
             android:id="@+id/chat_recyclerView_chat" android:layout_marginBottom="8dp"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"/>
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintTop_toTopOf="parent"/>
     <Button
             android:layout_width="50dp"
             android:id="@+id/add_photo_button_chat"
