--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -6,6 +6,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ChatActivity">
+    <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_chat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:logo="@mipmap/ic_launcher" />
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -33,7 +44,7 @@
             app:layout_constraintBottom_toTopOf="@+id/send_button_chat" android:background="@color/chatBackground"
             android:id="@+id/chat_recyclerView_chat" android:layout_marginBottom="8dp"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_chat"/>
     <Button
             android:layout_width="50dp"
             android:id="@+id/add_photo_button_chat"
