--- a/app/src/main/res/menu/messages_navigation_menu.xml
+++ b/app/src/main/res/menu/messages_navigation_menu.xml
@@ -6,6 +6,11 @@
             app:showAsAction="ifRoom">
     </item>
     <item
+            android:id="@+id/create_group_chat"
+            android:title="@string/createGroupChat"
+            app:showAsAction="collapseActionView">
+    </item>
+    <item
             android:id="@+id/setting_messages"
             android:title="@string/settings"
             app:showAsAction="collapseActionView">
