--- a/app/src/main/res/layout/create_groupchat_userlist.xml
+++ b/app/src/main/res/layout/create_groupchat_userlist.xml
@@ -5,26 +5,26 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        tools:context=".AddUsersToGroupActivity">
+        android:layout_marginTop="16dp">
     <TextView
             android:text="@string/userName"
             android:textColor="@android:color/black"
             android:textSize="16sp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/username_usersList"
-            app:layout_constraintTop_toTopOf="@+id/userImage_userList"
-            app:layout_constraintBottom_toBottomOf="@+id/userImage_userList"
+            android:id="@+id/username_usersList_create_groupChat"
+            app:layout_constraintTop_toTopOf="@+id/userImage_userList_create_groupChat"
+            app:layout_constraintBottom_toBottomOf="@+id/userImage_userList_create_groupChat"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            app:layout_constraintStart_toEndOf="@+id/userImage_userList" android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/userImage_userList_create_groupChat"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintEnd_toStartOf="@+id/checkBox"/>
     <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="64dp"
             android:layout_height="64dp" app:srcCompat="@drawable/circle_imagebutton_register"
             app:civ_border_width="2dp"
-            android:id="@+id/userImage_userList"
+            android:id="@+id/userImage_userList_create_groupChat"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -34,7 +34,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/checkBox"
-            app:layout_constraintTop_toTopOf="@+id/username_usersList"
-            app:layout_constraintBottom_toBottomOf="@+id/username_usersList" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/username_usersList_create_groupChat"
+            app:layout_constraintBottom_toBottomOf="@+id/username_usersList_create_groupChat"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
 </android.support.constraint.ConstraintLayout>
