--- a/app/src/main/res/layout/create_groupchat_userlist.xml
+++ b/app/src/main/res/layout/create_groupchat_userlist.xml
@@ -5,12 +5,12 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="0dp">
     <TextView
             android:text="@string/userName"
             android:textColor="@android:color/black"
             android:textSize="16sp"
-            android:layout_width="0dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:id="@+id/username_usersList_create_groupChat"
             app:layout_constraintTop_toTopOf="@+id/userImage_userList_create_groupChat"
@@ -29,7 +29,7 @@
             android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
             android:background="@mipmap/ic_launcher_round"
-    />
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
     <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
